<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HSE Robots</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="rate_label">MAC</string>
    <string name="alert_connect">Connect</string>
    <string name="label_name">Name</string>
    <string name="label_MAC">MAC address</string>
    <string name="add_bd_label">Accept</string>
    <string name="cancel_add_bd_label">Cancel</string>
    <string name="ok_add_bd_label">Finish</string>
    <string name="error">Application Error</string>
    <string name="suggestionEnableBluetooth">Please enable bluetooth to select devices!</string>
    <string name="btnEnBt">Enable bluetooth</string>
    <string name="add_device">Add device</string>
    <string name="paired_devices">List of paired devices</string>
    <string name="protocol_control">Protocol Control</string>
    <string name="favorites_devices">List of saved devices</string>
    <string name="no_devices_added">No devices paired</string>
    <string name="go_to_settings">New Mate</string>
    <string name="protocol_name">Name</string>
    <string name="protocol_length">Message length in bytes</string>
    <string name="protocol_xml">XML code view</string>
    <string name="TAG_default_protocol">arduino_default</string>
    <string name="switch_hold">Team Hold</string>
    <string name="name_manual_default">Device</string>
    <string name="alert_information">Information</string>
    <string name="alert_device_name">Device name:\u00A0</string>
    <string name="alert_MAC">MAC address:\u00A0</string>
    <string name="alert_protocol">Connection protocol:\u00A0</string>
    <string name="alert_class">Class:\u00A0</string>
    <string name="alert_type">Type:\u00A0</string>
    <string name="alert_save">Save</string>
    <string name="alert_device_saving">Device saving</string>
    <string name="alert_editing">Editing</string>
    <string name="alert_change">Edit</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_info">Information</string>
    <string name="alert_connection_attempt">Connecting...</string>
    <string name="button_forward">Forward</string>
    <string name="button_backward">Back</string>
    <string name="button_leftward">Leftward</string>
    <string name="button_rightward">Rightward</string>
    <string name="button_stop">Stop</string>
    <string name="drawer_item_add_protocol">Add new protocol</string>
    <string name="drawer_item_data_base">Delete device database</string>
    <string name="alert_device_name_tint">Device name</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_code">Source code</string>
    <string name="robot_item_image">Robot Appearance</string>
    <string name="manual_mac">Input mac</string>
    <string name="dialog_mac">Enter MAC address</string>
    <string name="hint_dialog_mac">MAC of 1234567890ABCDEF</string>
    <string name="instruction_alert">Hint</string>
    <string name="ok">OK</string>
    <string name="instruction_for_app">Use this app to connect to your robotic devices. If the list of devices is empty, add them by clicking on the appropriate button. You can add devices either manually or using the list of paired Bluetooth devices from the Android device settings. To connect, you can select several devices at once, to start the connection, select them with a long press in the list of available devices. Before starting the connection, you need to select the type of connection - WiFi or Bluetooth. Bluetooth connection requires all devices to have MAC addresses. For a WiFi connection, the devices must have an Ip and a port. For convenience, the indication of Bluetooth and WiFi connectivity for each device is displayed as an icon. \nThe application was created as part of the project work of IWT MIEM NRU HSE.</string>
    <string name="instruction_for_app_bt">Bluetooth connection requires all devices to have MAC addresses.</string>
    <string name="instruction_for_app_wifi">For a WiFi connection, devices must have an Ip and a port.</string>
    <string name="instruction_for_app_settings">Use the settings window to control the added protocols and device database.</string>
    <string name="instruction_for_app_device_menu">Use this window to edit and save devices, connect to an already saved device.</string>
    <string name="instruction_for_app_add_device">Use this window to save Bluetooth enabled devices. To add a new one to this list, go to settings and set up a new pairing.</string>
    <string name="instruction_for_app_connection_activity">Use the main joysticks and separate buttons to transfer basic actions to the robot/robots (forward, backward, left, right) and to transfer additional actions (motor speed adjustment, calibration of servomotors). Track the commands sent via the terminal. To demonstrate the video, use the buttons located in the center of the screen.</string>
    <string name="instructions_title">Instructions</string>
    <string name="other_discoverable_devices">New paired devices can be added in the menu below</string>
    <string name="TAG_FULL_MES">CodeCatalogue</string>
    <string name="TAG_CLASS_FROM">ClassFromDevice</string>
    <string name="TAG_TYPE_FROM">TypeFromDevice</string>
    <string name="TAG_CLASS_TO">ClassToDevice</string>
    <string name="TAG_TYPE_TO">TypeToDevice</string>
    <string name="TAG_TURN_COM">TurnOfCommand</string>
    <string name="TAG_TYPE_COM">TypeOfCommand</string>
    <string name="TAG_MOVE_CODE">TypeOfMove</string>
    <string name="button_show_protocols">output</string>
    <string name="button_add_device">Add Device</string>
    <string name="button_save_protocol">Add protocol</string>
    <string name="button_add_protocol">Add new protocol</string>
    <string name="button_delete_protocols">Delete custom protocols</string>
    <string name="error_incorrect">Invalid data</string>
    <string name="error_mac">Enter a valid MAC</string>
    <string name="title_activity_wi_fi_device">WiFiDeviceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_choose_file">Choose an existing file</string>
    <string name="button_choose_theme">Choose an app theme</string>
    <string name="alert_device_port_tint">Trigger port</string>
    <string name="alert_device_ip_hint">Device Ip</string>

    <string name="button_main">Main</string>
    <string name="button_settings">Settings</string>
    <string name="control_panel">Control Panel</string>
    <string name="command_hold">Command hold</string>
    <string name="button_left_n45">Left\n45</string>
    <string name="button_right_n45">Right\n45</string>
    <string name="button_left_n90">Left\n90</string>
    <string name="button_right_n90">Right\n90</string>
    <string name="terminal">Terminal</string>
    <string name="button_add_new_device">Adding new devices</string>
    <string name="button_list_of_paired">from paired list</string>
    <string name="button_manually_by_MAC">manually</string>
    <string name="button_select_type_connection">Select connection type</string>
    <string name="wi_fi_connection">Wi-Fi connection</string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="floating_action_button_connection">Connecting</string>
    <string name="protocol_control_settings">Settings</string>
    <string name="text_protocol_output">To display all available protocols, click the OUTPUT button</string>
    <string name="button_add_device_label">Add device</string>
    <string name="list_of_available_protocols">List of available protocols</string>
    <string name="no_available_protocols">No protocols available</string>
    <string name="bluetooth_device_activity_connected_first">Connected</string>
    <string name="bluetooth_device_activity_from">from</string>
    <string name="devices_title">devices.</string>
    <string name="bluetooth_device_activity_list_of_connections">List of successful connections:</string>
    <string name="device_title">Device</string>
    <string name="bluetooth_device_activity_connected_second">connected;</string>

    <string name="send_command_stop">Sending a stop command.</string>
    <string name="send_command_forward">Sending forward command.</string>
    <string name="send_command_back">Sending back command.</string>
    <string name="send_command_left">Sending command to move left.</string>
    <string name="send_command_right">Sending command to move right.</string>
    <string name="send_command_button_released">Button released, sending stop command.</string>
    <string name="send_command_insufficient_data">Insufficient data in the protocol used, message not sent.</string>
    <string name="send_command_hold_enabled">Command hold enabled…</string>
    <string name="send_command_hold_disabled">Command hold disabled…</string>

    <string name="settings_fragment_confirm">Confirmation</string>
    <string name="settings_fragment_delete_protocols">Are you sure you want to delete all custom protocols?</string>
    <string name="settings_fragment_button_ok">OK</string>
    <string name="settings_fragment_button_cancel">Cancel</string>
    <string name="wifi_not_supported_text">does not support WiFi</string>
    <string name="bluetooth_not_supported_text">does not support Bluetooth</string>
    <string name="button_more">More</string>
    <string name="suggestionNoBtWiFiAdapter">Your device does not have a Bluetooth or WiFi adapter, some app features are limited</string>
    <string name="suggestionNoWiFiAdapter">Your device does not have a WiFi adapter, WiFi connection is not possible</string>
    <string name="suggestionNoBtAdapter">Your device does not have a Bluetooth adapter, Bluetooth connection is not possible</string>
    <string name="en_bt_for_connection">Bluetooth must be enabled to connect</string>
    <string name="en_wifi_for_connection">WiFi must be enabled to connect</string>
    <string name="connection_error">Connection failed</string>
    <string name="selection_class_device_error">Devices with the same protocol, class, type are needed</string>
    <string name="en_bt_for_list">Please enable Bluetooth to open this menu</string>
    <string name="double_back_click">Press a second time to exit the application</string>
    <string name="alert_first_launch">Welcome! Use this app to control your robots. Detailed instructions are available by clicking on the question mark</string>
    <string name="label_connection_activity">ConnectionActivity</string>
</resources>