<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon_image_view_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/robot_item_image"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/type_cubbi"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/device_menu_bt_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_bluetooth_24"
        app:layout_constraintBottom_toBottomOf="@+id/icon_image_view_menu"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toEndOf="@+id/icon_image_view_menu" />

    <ImageView
        android:id="@+id/device_menu_wifi_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_wifi_24"
        app:layout_constraintBottom_toBottomOf="@+id/icon_image_view_menu"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/icon_image_view_menu"
        app:layout_constraintHeight_percent="0.05" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_image_view_menu">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/device_delete"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/alert_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/device_save"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/alert_save" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/device_connect"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/alert_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_connect">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <!-- here add your views -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/device_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/alert_device_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/device_ip_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:digits="0123456789."
                    android:hint="@string/alert_device_ip_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_port_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/device_port_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:hint="@string/alert_device_port_tint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_mac_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/device_mac_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/alert_MAC" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_class_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/device_class_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/alert_class"
                    android:inputType="none"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_type_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/device_type_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/alert_type"
                    android:inputType="none"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/device_proto_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/device_proto_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/alert_protocol"
                    android:inputType="none"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="96dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>