<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    android:animateLayoutChanges="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bottom_sheet_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearanceHeader"
            android:text="@string/button_add_new_device"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_device"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_device"
            android:gravity="center"
            android:textAppearance="@style/TextAppearanceRegular"
            android:singleLine="false"
            app:iconGravity="textStart"
            app:iconSize="18dp"
            android:theme="@style/AppTheme.Light"
            app:iconPadding="10dp"
            android:text="@string/button_list_of_paired"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_manual_mac"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearanceRegular"
            android:singleLine="false"
            android:text="@string/button_manually_by_MAC"
            app:icon="@drawable/ic_baseline_keyboard_24"
            android:theme="@style/AppTheme.Light"
            app:iconSize="18dp"
            app:iconPadding="11dp"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_device" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>