<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay">


            <EditText
                android:id="@+id/editDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_device_name_tint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editDeviceIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_device_ip_hint"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:digits="0123456789."
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editDevicePort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_device_port_tint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinner_proto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinner_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>