<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/paired_devices_title_add_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired_devices"
            android:textAlignment="center"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout_add_device"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paired_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:clipToPadding="false"
            android:fadeScrollbars="false"
            android:paddingBottom="96dp"
            android:scrollbarSize="5dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:textSize="16sp"
            tools:listitem="@layout/item_add_bd_device">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button_open_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/suggestionEnableBluetooth"
        android:text="@string/go_to_settings"
        app:icon="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>